--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         /* Hero Banner Section */
         .hero-banner {
-            background: linear-gradient(rgba(0, 51, 102, 0.8), rgba(0, 51, 102, 0.8)), url('https://scontent.fdac207-1.fna.fbcdn.net/v/t39.30808-6/488416584_1105817298236407_9004243297533648273_n.jpg?stp=dst-jpg_s417x417_tt6&_nc_cat=108&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeHW0kcFwLADpmgo5PWbpbdizsiCpvZQWgzOyIKm9lBaDBoBI_kBakwnWmlgK3A6jgEWhkPTSJE4xQv-JWlPz5xN&_nc_ohc=uVk_TUExZ6cQ7kNvwExvxbp&_nc_oc=AdnxqS9lshP1C9reGBm6eX5o50JvauDdx2C8ZZxwboAh6x1cRPDNHe_mvTijwMpUwXs&_nc_zt=23&_nc_ht=scontent.fdac207-1.fna&_nc_gid=FAbOFJ2CNo_nA2XD399ifA&oh=00_AfrfHCNPfHMzrTF-IFjIHUEQwcHu3wgXqhApJXbjwb6M3Q&oe=6969B942');
+            background: url('https://scontent.fdac207-1.fna.fbcdn.net/v/t39.30808-6/488416584_1105817298236407_9004243297533648273_n.jpg?stp=dst-jpg_s417x417_tt6&_nc_cat=108&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeHW0kcFwLADpmgo5PWbpbdizsiCpvZQWgzOyIKm9lBaDBoBI_kBakwnWmlgK3A6jgEWhkPTSJE4xQv-JWlPz5xN&_nc_ohc=uVk_TUExZ6cQ7kNvwExvxbp&_nc_oc=AdnxqS9lshP1C9reGBm6eX5o50JvauDdx2C8ZZxwboAh6x1cRPDNHe_mvTijwMpUwXs&_nc_zt=23&_nc_ht=scontent.fdac207-1.fna&_nc_gid=FAbOFJ2CNo_nA2XD399ifA&oh=00_AfrfHCNPfHMzrTF-IFjIHUEQwcHu3wgXqhApJXbjwb6M3Q&oe=6969B942');
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -463,3 +463,4 @@
 </body>
 
 </html>
+
