--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: black;
+            color: red;
             text-align: center;
         }
 
